tests/urmoac/input/wkt/errors/point_missing_id/errors.urmoac
Could not parse object id '' to long.
Objects could not be loaded.
Quitting on error...
